; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_usbgecko.c___usbgecko_exi_wait.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_usbgecko.c___usbgecko_exi_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@usbgecko_inited = common dso_local global i32 0, align 4
@EXI_DEVICE_0 = common dso_local global i32 0, align 4
@__usbgecko_exi_unlock = common dso_local global i32 0, align 4
@wait_exi_queue = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @__usbgecko_exi_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__usbgecko_exi_wait(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @_CPU_ISR_Disable(i32 %4)
  %6 = load i32, i32* @usbgecko_inited, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %1
  %9 = call i32 (...) @__usbgecko_init()
  br label %10

10:                                               ; preds = %8, %1
  br label %11

11:                                               ; preds = %17, %10
  %12 = load i64, i64* %2, align 8
  %13 = load i32, i32* @EXI_DEVICE_0, align 4
  %14 = load i32, i32* @__usbgecko_exi_unlock, align 4
  %15 = call i64 @EXI_Lock(i64 %12, i32 %13, i32 %14)
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %11
  %18 = load i32*, i32** @wait_exi_queue, align 8
  %19 = load i64, i64* %2, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @LWP_ThreadSleep(i32 %21)
  br label %11

23:                                               ; preds = %11
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @_CPU_ISR_Restore(i32 %24)
  ret void
}

declare dso_local i32 @_CPU_ISR_Disable(i32) #1

declare dso_local i32 @__usbgecko_init(...) #1

declare dso_local i64 @EXI_Lock(i64, i32, i32) #1

declare dso_local i32 @LWP_ThreadSleep(i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
